--- a/wg-easy-deploy.yml
+++ b/wg-easy-deploy.yml
@@ -49,6 +49,8 @@ spec:
           value: "51820"
         - name: WG_PERSISTENT_KEEPALIVE
           value: "25"
+        - name: WG_DEFAULT_DNS
+          value: "192.168.1.1"
         volumeMounts:
         - name: wg-easy
           mountPath: /etc/wireguard
