--- a/wg-easy-deploy.yml
+++ b/wg-easy-deploy.yml
@@ -52,7 +52,7 @@ spec:
         - name: WG_DEFAULT_DNS
           value: "192.168.1.1"
         - name: WG_ALLOWED_IPS
-          value: "0.0.0.0/0, ::/0, 192.168.1.0/24, 192.168.3.0/24"
+          value: "0.0.0.0/0, ::/0, 192.168.1.0/24"
         volumeMounts:
         - name: wg-easy
           mountPath: /etc/wireguard
