--- a/wg-easy-deploy.yml
+++ b/wg-easy-deploy.yml
@@ -17,6 +17,12 @@ spec:
         app: wg-easy
         part-of: wg-easy
     spec:
+      securityContext:
+        sysctls:
+        - name: net.ipv4.conf.all.src_valid_mark
+          value: "1"
+        - name: net.ipv4.ip_forward
+          value: "1"
       affinity:
         nodeAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
@@ -53,6 +59,8 @@ spec:
           value: "192.168.1.1"
         - name: WG_ALLOWED_IPS
           value: "0.0.0.0/0, ::/0, 192.168.1.0/24"
+        - name: WG_MTU
+          value: "1450"
         volumeMounts:
         - name: wg-easy
           mountPath: /etc/wireguard
