--- a/wg-easy-deploy.yml
+++ b/wg-easy-deploy.yml
@@ -17,12 +17,12 @@ spec:
         app: wg-easy
         part-of: wg-easy
     spec:
-      securityContext:
-        sysctls:
-        - name: net.ipv4.conf.all.src_valid_mark
-          value: "1"
-        - name: net.ipv4.ip_forward
-          value: "1"
+#      securityContext:
+#        sysctls:
+#        - name: net.ipv4.conf.all.src_valid_mark
+#          value: "1"
+#        - name: net.ipv4.ip_forward
+#          value: "1"
       affinity:
         nodeAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
