--- a/wg-easy-deploy.yml
+++ b/wg-easy-deploy.yml
@@ -58,7 +58,7 @@ spec:
         - name: WG_DEFAULT_DNS
           value: "192.168.1.1"
         - name: WG_ALLOWED_IPS
-          value: "0.0.0.0/0, ::/0, 192.168.1.0/24"
+          value: "192.168.1.0/24"
         - name: WG_MTU
           value: "1450"
         volumeMounts:
