--- a/wg-easy-deploy.yml
+++ b/wg-easy-deploy.yml
@@ -17,6 +17,7 @@ spec:
         app: wg-easy
         part-of: wg-easy
     spec:
+      nodeName: k3s-master01
       securityContext:
         sysctls:
         - name: net.ipv4.conf.all.src_valid_mark
